# Gestion_de_tournoi_bots

./: .gitignore  README.md  ToDoList.md  git_setup_commit.sh  planification.md
App/: Arbitre.cc  Arbitre.hh  CMakeLists.txt  Competition.cc  Competition.hh  Jeu.cc  Jeu.hh  Joueur.cc  Joueur.hh  Registre.hh  macro.hh  main.cpp
App/Jeu/: CMakeLists.txt  Jeu_Idiot.cc  Jeu_Idiot.hh  Jeu_template.cc  Jeu_template.hh  includeTousJeux.hh  includeTousJeux.hh.in
App/Joueur/: CMakeLists.txt  Joueur_Brutal.cc  Joueur_Brutal.hh  Joueur_Random.cc  Joueur_Random.hh  Joueur_template.cc  Joueur_template.hh  includeTousJoueurs.hh  includeTousJoueurs.hh.in
App/include/Jeu/: Jeu.cc  Jeu.hh
App/include/Joueur/: Joueur.cc  Joueur.hh
App/include/macro/: Registre.cc  Registre.hh  macro.hh
ressources/Jeu/: Jeu_Idiot.cc  Jeu_Idiot.hh  Jeu_template.cc  Jeu_template.hh
ressources/Joueur/: Joueur_Brutal.cc  Joueur_Brutal.hh  Joueur_Random.cc  Joueur_Random.hh  Joueur_template.cc  Joueur_template.hh
